Fix edit form size on mobile devices

--- a/front-end/src/Components/EditEvent.css
+++ b/front-end/src/Components/EditEvent.css
@@ -53,7 +53,7 @@
   margin-bottom: 20px;
 }
 
-.checkSpan-container h2{
+.checkSpan-container h2 {
   margin-bottom: 20px;
 }
 
@@ -108,4 +108,23 @@
 
 .edit-input {
   margin-top: 30px;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 800px) {
+  .edit-eventform {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .form-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .edit-input input {
+    width: fit-content;
+  }
 }
